# TEMP-WORK

./: .gitattributes  000_ICRM_AI_Layer_Business_Case.md  010_Value_Proposition.md  020_Capabilities_and_Use_Cases.md  030_Business_Impact_and_KPIs.md  040_Governance_Risk_Implementation.md  050_Report_and_Deck_Narrative.md  2025 CRA Training Transcript.md  3_DIAGRAMS_Workspace  Action Items.txt  Blog Post.txt  Brief.txt  Briefing Document.docx  Briefing Document.txt  CIA-ComplianceMonitoring-Workflow-v1_0.drawio  CIA-ComplianceTesting-Workflow-v1_0.drawio  CIA-HighLevel-LogicalFlow-v3.drawio  CIA-HighLevel-LogicalFlow.drawio  CIA-IssueManagementAndValidation-Module-Workflow-v1.0.drawio  CIA-IssueManagementAndValidation-Module-Workflow-v1_1.drawio  CRA-000_Master-Index.md  CRA-002_Technical-Reference.txt  CRA-003_Workflow-Runbook.md  CRA-006_System-Context-Pack.txt  CRA-007_Container-Component-Inventory.txt  CRA-008_Data-Flow-Inventory.md  CRA-009_Sequence-Interaction-Catalog.md  CRA-010_Deployment-Topology.md  CRA-C4L1-Business.drawio  CRA-C4L2-Container-Technical.drawio  CRA-C4L3-RatingService-Technical.drawio  CRA-HLLFD-Technical.drawio  Consolidated C4 Context L1.drawio  Detailed Notes.txt  Detailed Timeline.txt  Diagram  Dive me the detailed Prompl library for this step.md  ERAP-C4-Context.drawio  FAQ.docx  FCRA-FlexMatrix-HighLevelLogicalView.drawio  (+55 more)
3_DIAGRAMS_Workspace/DIAGRAMS/: README.md
AI-Resource-Hub/Standards/: ARCH-001_Skill_Architecture.md  ARCH-002_Context_Templates.md
asd/: .gitignore  Cargo.toml  PROGRESS.md  README.md  build.rs  config.toml.example  start_meeting_assistant.bat
asd/docs/: 000_PreBuild_Audit_VDI_Meeting_Assistant.md  010_Claude_Code_Implementation_Guide.md
asd/migrations/: 001_initial.sql
asd/src/: config.rs  error.rs  main.rs
asd/src/ai/: embedding.rs  llm.rs  mod.rs  processor.rs  prompts.rs
asd/src/capture/: audio.rs  device.rs  mod.rs  writer.rs
asd/src/search/: keyword.rs  mod.rs  semantic.rs
asd/src/session/: manager.rs  mod.rs  windows.rs
asd/src/storage/: db.rs  mod.rs  queue.rs  vectors.rs
asd/src/transcription/: engine.rs  pipeline.rs
asd/src/ui/: hotkey.rs  mod.rs  tray.rs
ctr/: CTR-C4Context-Technical-v1.0.drawio  CTR-DataFlowDiagram-v1.0.drawio  CTR-DataFlowView-v1.0.drawio  CTR-HLLFD-Technical-v1.0.drawio
fad/: mvnw.cmd  pom.xml  run.bat
github/: copilot-instructions.md
github/instructions/: archives.instructions.md
github/prompts/: create-diagram.prompt.md  create-documentation.prompt.md  diagram-c4-component.prompt.md  diagram-c4-container.prompt.md  diagram-c4-context.prompt.md  diagram-deployment.prompt.md  diagram-dfd.prompt.md  diagram-erd.prompt.md  diagram-hllfd.prompt.md  diagram-integration-map.prompt.md  diagram-sequence.prompt.md  diagram-state.prompt.md  (+18 more)
workspaces/: _master.code-workspace
ypc/: README.md  dependency-reduced-pom.xml  mvnw
(+133 files in other folders)
