[package]
name = "meeting_assistant"
version = "0.1.0"
edition = "2021"
description = "Local-first AI meeting assistant for restricted VDI environments"
authors = [""]

[[bin]]
name = "meeting_assistant"
path = "src/main.rs"

[dependencies]
# ─── Error handling ───────────────────────────────────────────────────────────
anyhow = "1.0"
thiserror = "1.0"

# ─── Async runtime ────────────────────────────────────────────────────────────
tokio = { version = "1.36", features = ["full"] }

# ─── Audio capture ────────────────────────────────────────────────────────────
cpal = "0.15"
hound = "3.5"

# ─── Speech-to-text ───────────────────────────────────────────────────────────
whisper-rs = "0.16"

# ─── HTTP client (for llama.cpp server API) ───────────────────────────────────
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# ─── ONNX Runtime (embedding model inference) ────────────────────────────────
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ndarray = "0.15"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
futures = "0.3"

# ─── Vector database ──────────────────────────────────────────────────────────
lancedb = "0.14"
arrow-array = "53"
arrow-schema = "53"

# ─── SQLite ───────────────────────────────────────────────────────────────────
rusqlite = { version = "0.31", features = ["bundled", "vtab", "array"] }

# ─── Configuration ────────────────────────────────────────────────────────────
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ─── Logging ──────────────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# ─── System tray (Windows) ────────────────────────────────────────────────────
tray-item = "0.9"

# ─── Utilities ────────────────────────────────────────────────────────────────
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
notify = "6.1"
crossbeam-channel = "0.5"

# ─── Windows API (session change events, thread priority) ─────────────────────
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Devices_Properties",
    "Win32_Media_Audio",
    "Win32_System_RemoteDesktop",
] }

[build-dependencies]
embed-resource = "3.0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
